# audio_test_client

./: .clang-format  Android.bp  Android.bp_bk  Android.mk  Android.mk_bk  CMakeLists.txt  README.md  README_EN.md  audio_test_client.cpp  audiorecord_test_client.cpp  audiotrack_test_client.cpp
